e2e/tests/all/snapshots/time-picker-digital_rest_mobile.snap
---
source: e2e/src/suite.rs
description: time-picker-digital at mobile (rest)
expression: tree
---
generic
  spinbutton "Hours" = 9 [valuemax=23] [valuemin=0]
    StaticText "09"
  spinbutton "Minutes" = 30 [valuemax=55] [valuemin=0]
    StaticText "30"
