e2e/tests/all/snapshots/tldr_open_desktop.snap
---
source: e2e/src/suite.rs
description: tldr at desktop (open)
expression: tree
---
heading "A page" [level=1]
  StaticText "A page"
button "TLDR" [expanded] [haspopup=menu]
  StaticText "TLDR"
menu "TLDR"
  group "Summarize with"
    StaticText "Summarize with"
    menuitem "ChatGPT (opens in a new tab)"
      StaticText "ChatGPT"
      StaticText "(opens in a new tab)"
    menuitem "Google AI (opens in a new tab)"
      StaticText "Google AI"
      StaticText "(opens in a new tab)"
    menuitem "Claude (opens in a new tab)"
      StaticText "Claude"
      StaticText "(opens in a new tab)"
    menuitem "Perplexity (opens in a new tab)"
      StaticText "Perplexity"
      StaticText "(opens in a new tab)"
--> aria-controls [id="lsx-N-menu"] (rendered above)
